--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,6 +5,7 @@
 }
 
 body {
+
   header {
     .head-nav {
       .covid-nav {
@@ -527,45 +528,113 @@ body {
     }
   }
 
-
-
   footer {
-    .emailSection {
-      background-color: #233A95FF;
-      width: 100%;
+    .couponSection {
+      .email {
+        background-color: #233A95FF;
+        width: 100%;
+        margin: 40px 0 0 0;
 
-      .coupon {
-        margin-top: 50px;
+        .coupon {
+          margin-top: 50px;
+        }
+
+        .content {
+          margin-top: 50px;
+          margin-bottom: 40px;
+          width: 30%;
+          position: relative;
+          color: white;
+
+          p {
+            width: 75%;
+            margin: 5px 0;
+            opacity: 0.7;
+          }
+
+          input {
+            padding: 20px 55px;
+            width: 100%;
+            margin: 30px 0 0 0;
+            border-radius: 10px;
+            outline: none;
+          }
+
+          button {
+            position: absolute;
+            padding: 15px 25px;
+            right: 2%;
+            bottom: 10%;
+          }
+        }
       }
+    }
 
-      .content {
-        margin-top: 50px;
-        margin-bottom: 40px;
-        width: 30%;
-        position: relative;
-        color: white;
+    .serviceBody {
+      background: #F7F8FDFF;
+      padding-top: 20px;
 
-        p {
-          width: 75%;
-          margin: 5px 0;
-          opacity: 0.7;
+      .service {
+        width: 100%;
+        border-bottom: 2px solid rgb(198, 198, 198);
+        padding: 20px 0;
+        background: #F7F8FDFF;
+
+        h5 {
+          padding: 0 0 10px 0;
+          font-size: 18px !important;
         }
 
-        input {
-          padding: 20px 55px;
-          width: 100%;
-          margin: 30px 0 0 0;
-          border-radius: 10px;
-          outline: none;
-        }
-
-        button {
-          position: absolute;
-          padding: 15px 25px;
-          right: 2%;
-          bottom: 10%;
+        span {
+          opacity: 0.6;
         }
       }
+    }
+
+    .productsBody {
+      background: #F7F8FDFF;
+      
+      .products {
+        padding: 6% 0;
+
+        .row {
+          ul {
+            >a {
+              font-weight: 400;
+              opacity: 1 !important;
+            }
+
+            a {
+              text-decoration: none;
+              color: black;
+              opacity: 0.6;
+            }
+
+            li {
+              text-decoration: none;
+              list-style: none;
+              margin-top: 8px;
+              font-size: 13px;
+            }
+          }
+        }
+
+      }
+    }
+
+    .contactBody {
+      .contact {
+        border-bottom: 1px solid grey;
+
+        .contactNumb {
+          padding: 0;
+          flex-wrap: wrap;
+        }
+      }
+    }
+
+    .copyrightBody {
+      .copyright {}
     }
   }
 }
