--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -476,165 +476,209 @@ body {
       }
     }
 
-    .categorySection {
-      background: rgb(206, 184, 184);
-    }
+    .categorySection {}
 
     .deadlineSection {
-      .content {
-        h5 {
-          color: blue;
-        }
-
-        div {
-          width: 20px;
-
-          :first-child {
-            font-size: 16px;
-          }
-
-          span {
-            margin-top: 12px;
-            size: 20px;
-            font-weight: 600;
-          }
-
-        }
-
-
-        .time {
-          width: 100px;
-          margin: 0 10px;
-          padding: 15px;
-          font-weight: 600;
-          color: white;
-          background: red;
+      .categories {
+        .leftSide {
+          width: 30%;
+          height: 740px;
+          border: 2px solid red;
           border-radius: 10px;
+
+          .content {
+            h5 {
+              color: #2372C1FF;
+            }
+
+            .name {
+              font-size: 20px;
+              margin: 5px 0;
+            }
+
+            p {
+              img {
+                width: 100px;
+              }
+            }
+
+            div {
+              width: 20px;
+
+              :first-child {
+                font-size: 16px;
+              }
+
+              span {
+                margin-top: 12px;
+                size: 20px;
+                font-weight: 600;
+              }
+
+            }
+
+
+            .time {
+              width: 100px;
+              margin: 0 10px;
+              padding: 15px;
+              font-weight: 600;
+              color: white;
+              background: #ED174AFF;
+              border-radius: 10px;
+            }
+          }
         }
 
+        .rightSide {
+          flex-wrap: wrap;
+          margin-left: 30px;
+          border: 1px solid rgb(211, 211, 211);
+          border-radius: 10px;
+
+          .product {
+            border: 0.5px solid rgb(214, 214, 214);
+
+            .content {
+              padding: 25px;
+
+              p {
+                width: 90%;
+                margin: 0 !important;
+
+                img {
+                  width: 40%;
+                }
+              }
+
+              strong {
+                font-size: 10px;
+                font-weight: 700;
+                color: #2FC573FF;
+              }
+
+              img {
+                width: 100%;
+              }
+            }
+          }
+        }
+      }
+    }
+
+  }
+
+  .weekendDiscountSection {}
+
+  .carouselProductSection {}
+}
+
+footer {
+  .couponSection {
+    .email {
+      background-color: #233A95FF;
+      width: 100%;
+      margin: 40px 0 0 0;
+
+      .coupon {
+        margin-top: 50px;
       }
 
+      .content {
+        margin-top: 50px;
+        margin-bottom: 40px;
+        width: 30%;
+        position: relative;
+        color: white;
 
+        p {
+          width: 75%;
+          margin: 5px 0;
+          opacity: 0.7;
+        }
+
+        input {
+          padding: 20px 55px;
+          width: 100%;
+          margin: 30px 0 0 0;
+          border-radius: 10px;
+          outline: none;
+        }
+
+        button {
+          position: absolute;
+          padding: 15px 25px;
+          right: 2%;
+          bottom: 10%;
+        }
+      }
     }
+  }
 
-    .weekendDiscountSection {
-      background: red;
+  .serviceBody {
+    background: #F7F8FDFF;
+    padding-top: 20px;
 
+    .service {
+      width: 100%;
+      border-bottom: 2px solid rgb(198, 198, 198);
+      padding: 20px 0;
+      background: #F7F8FDFF;
+
+      h5 {
+        padding: 0 0 10px 0;
+        font-size: 18px !important;
+      }
+
+      span {
+        opacity: 0.6;
+      }
     }
+  }
 
-    .carouselProductSection {
-      background: #000;
+  .productsBody {
+    background: #F7F8FDFF;
+
+    .products {
+      padding: 6% 0;
+
+      .row {
+        ul {
+          >a {
+            font-weight: 400;
+            opacity: 1 !important;
+          }
+
+          a {
+            text-decoration: none;
+            color: black;
+            opacity: 0.6;
+          }
+
+          li {
+            text-decoration: none;
+            list-style: none;
+            margin-top: 8px;
+            font-size: 13px;
+          }
+        }
+      }
 
     }
   }
 
-  footer {
-    .couponSection {
-      .email {
-        background-color: #233A95FF;
-        width: 100%;
-        margin: 40px 0 0 0;
+  .contactBody {
+    .contact {
+      border-bottom: 1px solid grey;
 
-        .coupon {
-          margin-top: 50px;
-        }
-
-        .content {
-          margin-top: 50px;
-          margin-bottom: 40px;
-          width: 30%;
-          position: relative;
-          color: white;
-
-          p {
-            width: 75%;
-            margin: 5px 0;
-            opacity: 0.7;
-          }
-
-          input {
-            padding: 20px 55px;
-            width: 100%;
-            margin: 30px 0 0 0;
-            border-radius: 10px;
-            outline: none;
-          }
-
-          button {
-            position: absolute;
-            padding: 15px 25px;
-            right: 2%;
-            bottom: 10%;
-          }
-        }
+      .contactNumb {
+        padding: 0;
+        flex-wrap: wrap;
       }
     }
+  }
 
-    .serviceBody {
-      background: #F7F8FDFF;
-      padding-top: 20px;
-
-      .service {
-        width: 100%;
-        border-bottom: 2px solid rgb(198, 198, 198);
-        padding: 20px 0;
-        background: #F7F8FDFF;
-
-        h5 {
-          padding: 0 0 10px 0;
-          font-size: 18px !important;
-        }
-
-        span {
-          opacity: 0.6;
-        }
-      }
-    }
-
-    .productsBody {
-      background: #F7F8FDFF;
-      
-      .products {
-        padding: 6% 0;
-
-        .row {
-          ul {
-            >a {
-              font-weight: 400;
-              opacity: 1 !important;
-            }
-
-            a {
-              text-decoration: none;
-              color: black;
-              opacity: 0.6;
-            }
-
-            li {
-              text-decoration: none;
-              list-style: none;
-              margin-top: 8px;
-              font-size: 13px;
-            }
-          }
-        }
-
-      }
-    }
-
-    .contactBody {
-      .contact {
-        border-bottom: 1px solid grey;
-
-        .contactNumb {
-          padding: 0;
-          flex-wrap: wrap;
-        }
-      }
-    }
-
-    .copyrightBody {
-      .copyright {}
-    }
+  .copyrightBody {
+    .copyright {}
   }
 }
