--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -588,6 +588,56 @@ body .weekendDiscountSection .side .content h6 {
   font-weight: 400;
 }
 
+body .carouselProductSection > div {
+  margin-left: 11%;
+}
+
+body .carouselProductSection .product {
+  border: 0.5px solid #d6d6d6;
+  width: 20%;
+}
+
+body .carouselProductSection .product .content {
+  padding: 20px;
+}
+
+body .carouselProductSection .product .content a {
+  font-size: 15px;
+  width: 120%;
+  margin: 0 !important;
+  text-decoration: none;
+  color: black;
+}
+
+body .carouselProductSection .product .content p img {
+  margin-left: -5px;
+  width: 60%;
+}
+
+body .carouselProductSection .product .content strong {
+  padding: 8px 0;
+  display: block;
+  font-size: 10px;
+  font-weight: 700;
+  color: #2FC573FF;
+}
+
+body .carouselProductSection .product .content img {
+  width: 100%;
+}
+
+body .carouselProductSection .product .content button {
+  font-size: 12px;
+  font-weight: 600;
+  padding: 5px 30px;
+  margin: 7px 0;
+  width: 100%;
+  border-radius: 20px;
+  outline: none;
+  border: none;
+  background-color: #FFCD00FF;
+}
+
 footer .couponSection .email {
   background-color: #233A95FF;
   width: 100%;
