--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -589,7 +589,60 @@ body {
     }
   }
 
-  .carouselProductSection {}
+  .carouselProductSection {
+
+    >div {
+      margin-left: 11%;
+    }
+
+    .product {
+      border: 0.5px solid rgb(214, 214, 214);
+      width: 20%;
+
+      .content {
+        padding: 20px;
+
+        a {
+          font-size: 15px;
+          width: 120%;
+          margin: 0 !important;
+          text-decoration: none;
+          color: black;
+        }
+
+        p {
+          img {
+            margin-left: -5px;
+            width: 60%;
+          }
+        }
+
+        strong {
+          padding: 8px 0;
+          display: block;
+          font-size: 10px;
+          font-weight: 700;
+          color: #2FC573FF;
+        }
+
+        img {
+          width: 100%;
+        }
+
+        button {
+          font-size: 12px;
+          font-weight: 600;
+          padding: 5px 30px;
+          margin: 7px 0;
+          width: 100%;
+          border-radius: 20px;
+          outline: none;
+          border: none;
+          background-color: #FFCD00FF;
+        }
+      }
+    }
+  }
 }
 
 footer {
