feat : new plugin productCarousel

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -754,3 +754,124 @@ footer {
     .copyright {}
   }
 }
+
+
+.cntnr {
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media (min-width: 768px) {
+  .cntnr {
+    width: 750px;
+  }
+}
+
+@media (min-width: 992px) {
+  .cntnr {
+    width: 970px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .cntnr {
+    width: 1170px;
+  }
+}
+
+
+
+@media (max-width: 767px) {
+  #featurecntnr .carousel-inner .carousel-item>div {
+    display: none;
+  }
+
+  #featurecntnr .carousel-inner .carousel-item>div:first-child {
+    display: block;
+  }
+}
+
+#featurecntnr .carousel-inner .carousel-item.active,
+#featurecntnr .carousel-inner .carousel-item-next,
+#featurecntnr .carousel-inner .carousel-item-prev {
+  display: flex;
+}
+
+/* medium and up screens */
+@media (min-width: 768px) {
+
+  #featurecntnr .carousel-inner .carousel-item-end.active,
+  #featurecntnr .carousel-inner .carousel-item-next {
+    transform: translateX(20%);
+  }
+
+  #featurecntnr .carousel-inner .carousel-item-start.active,
+  #featurecntnr .carousel-inner .carousel-item-prev {
+    transform: translateX(-20%);
+  }
+
+  #featurecntnr .card img {
+    width: 90%;
+  }
+
+  #featurecntnr .carousel-item {
+    justify-content: space-between;
+  }
+}
+
+@media (max-width: 767px) {
+  #featurecntnr .card img {
+    width: 100%;
+  }
+}
+
+#featurecntnr .carousel-inner .carousel-item-end,
+#featurecntnr .carousel-inner .carousel-item-start {
+  transform: translateX(0);
+}
+
+#featurecntnr .card {
+  border: 0;
+}
+
+#featurecntnr .card {
+  position: relative;
+}
+
+#featurecntnr .card .card-img-overlays {
+  position: absolute;
+  bottom: 15%;
+  left: 10%;
+  color: #fff;
+  font-weight: bolder;
+}
+
+#featurecntnr a {
+  text-decoration: none;
+}
+
+#featurecntnr .indicator {
+  border: 1px solid rgb(202, 202, 202);
+  padding: 3px 6px 3px 6px;
+}
+
+#featurecntnr .indicator:hover {
+  background-color: blue;
+  border: 1px solid blue;
+  transition: 1000ms;
+}
+
+#featurecntnr .indicator:hover {
+  color: white;
+  transition: 1000ms;
+}
+
+#featurecntnr .indicator {
+  color: lightgray;
+}
+
+#featurecntnr .float-end {
+  padding-top: 10px;
+}
