--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -733,4 +733,126 @@ footer .contactBody .contact .contactNumb {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
+
+.cntnr {
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media (min-width: 768px) {
+  .cntnr {
+    width: 750px;
+  }
+}
+
+@media (min-width: 992px) {
+  .cntnr {
+    width: 970px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .cntnr {
+    width: 1170px;
+  }
+}
+
+@media (max-width: 767px) {
+  #featurecntnr .carousel-inner .carousel-item > div {
+    display: none;
+  }
+  #featurecntnr .carousel-inner .carousel-item > div:first-child {
+    display: block;
+  }
+}
+
+#featurecntnr .carousel-inner .carousel-item.active,
+#featurecntnr .carousel-inner .carousel-item-next,
+#featurecntnr .carousel-inner .carousel-item-prev {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+/* medium and up screens */
+@media (min-width: 768px) {
+  #featurecntnr .carousel-inner .carousel-item-end.active,
+  #featurecntnr .carousel-inner .carousel-item-next {
+    -webkit-transform: translateX(20%);
+            transform: translateX(20%);
+  }
+  #featurecntnr .carousel-inner .carousel-item-start.active,
+  #featurecntnr .carousel-inner .carousel-item-prev {
+    -webkit-transform: translateX(-20%);
+            transform: translateX(-20%);
+  }
+  #featurecntnr .card img {
+    width: 90%;
+  }
+  #featurecntnr .carousel-item {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
+@media (max-width: 767px) {
+  #featurecntnr .card img {
+    width: 100%;
+  }
+}
+
+#featurecntnr .carousel-inner .carousel-item-end,
+#featurecntnr .carousel-inner .carousel-item-start {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+
+#featurecntnr .card {
+  border: 0;
+}
+
+#featurecntnr .card {
+  position: relative;
+}
+
+#featurecntnr .card .card-img-overlays {
+  position: absolute;
+  bottom: 15%;
+  left: 10%;
+  color: #fff;
+  font-weight: bolder;
+}
+
+#featurecntnr a {
+  text-decoration: none;
+}
+
+#featurecntnr .indicator {
+  border: 1px solid #cacaca;
+  padding: 3px 6px 3px 6px;
+}
+
+#featurecntnr .indicator:hover {
+  background-color: blue;
+  border: 1px solid blue;
+  -webkit-transition: 1000ms;
+  transition: 1000ms;
+}
+
+#featurecntnr .indicator:hover {
+  color: white;
+  -webkit-transition: 1000ms;
+  transition: 1000ms;
+}
+
+#featurecntnr .indicator {
+  color: lightgray;
+}
+
+#featurecntnr .float-end {
+  padding-top: 10px;
+}
 /*# sourceMappingURL=main.css.map */
