--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -643,6 +643,103 @@ body {
       }
     }
   }
+
+  .extraPercent {
+    background-color: #FBEACFFF;
+
+    :first-child {
+      :first-child {
+        justify-content: space-around;
+
+        h2 {
+          padding: 15px 0;
+        }
+      }
+    }
+
+
+  }
+
+  .extraProductSection {
+    >div {
+      margin-left: 11%;
+
+      .product {
+        border: 0.5px solid rgb(214, 214, 214);
+        width: 20%;
+
+        .content {
+          padding: 20px;
+
+          a {
+            font-size: 15px;
+            width: 120%;
+            margin: 0 !important;
+            text-decoration: none;
+            color: black;
+          }
+
+          p {
+            img {
+              margin-left: -5px;
+              width: 60%;
+            }
+          }
+
+          strong {
+            padding: 8px 0;
+            display: block;
+            font-size: 10px;
+            font-weight: 700;
+            color: #2FC573FF;
+          }
+
+          img {
+            width: 100%;
+          }
+        }
+      }
+    }
+  }
+
+  .lastSectionBody {
+    .lastSection {
+      margin-left: 10.5%;
+
+      .product {
+        position: relative;
+        margin-top: 40px;
+
+        img {
+          width: 97%;
+          border-radius: 10px;
+        }
+
+        .content {
+          position: absolute;
+          top: 0;
+          left: 0;
+          padding: 35px 45px;
+
+          h6 {
+            color: green;
+          }
+
+          h3 {}
+
+          p {}
+
+          button {
+            color: white;
+            background-color: #C2C2D3FF;
+            border: none;
+            outline: none;
+            border-radius: 30px;
+          }
+        }
+      }
+    }
+  }
 }
 
 footer {
@@ -755,13 +852,7 @@ footer {
   }
 }
 
-
-.cntnr {
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
-}
+// responsive
 
 @media (min-width: 768px) {
   .cntnr {
@@ -791,6 +882,16 @@ footer {
   #featurecntnr .carousel-inner .carousel-item>div:first-child {
     display: block;
   }
+}
+
+
+// hazir goturduyum scss -e cevirmedim
+
+.cntnr {
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 #featurecntnr .carousel-inner .carousel-item.active,
@@ -824,6 +925,7 @@ footer {
 @media (max-width: 767px) {
   #featurecntnr .card img {
     width: 100%;
+    height: 75vh;
   }
 }
 
@@ -860,12 +962,12 @@ footer {
 #featurecntnr .indicator:hover {
   background-color: blue;
   border: 1px solid blue;
-  transition: 1000ms;
+  transition: 200ms;
 }
 
 #featurecntnr .indicator:hover {
   color: white;
-  transition: 1000ms;
+  transition: 200ms;
 }
 
 #featurecntnr .indicator {
