--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -482,91 +482,94 @@ body {
     .categorySection {}
 
     .deadlineSection {
-      .categories {
-        .leftSide {
-          width: 30%;
-          height: 740px;
-          border: 2px solid red;
-          border-radius: 10px;
-
-          .content {
-            h5 {
-              color: #2372C1FF;
-            }
-
-            .name {
-              font-size: 20px;
-              margin: 5px 0;
-            }
-
-            p {
-              img {
-                width: 100px;
-              }
-            }
-
-            div {
-              width: 20px;
-
-              :first-child {
-                font-size: 16px;
-              }
-
-              span {
-                margin-top: 12px;
-                size: 20px;
-                font-weight: 600;
-              }
-
-            }
-
-
-            .time {
-              width: 100px;
-              margin: 0 10px;
-              padding: 15px;
-              font-weight: 600;
-              color: white;
-              background: #ED174AFF;
-              border-radius: 10px;
-            }
-          }
-        }
-
-        .rightSide {
-          flex-wrap: wrap;
-          margin-left: 30px;
-          border: 1px solid rgb(211, 211, 211);
-          border-radius: 10px;
-
-          .product {
-            border: 0.5px solid rgb(214, 214, 214);
+      #deadline {
+        .categories {
+          .leftSide {
+            width: 30%;
+            height: 740px;
+            border: 2px solid red;
+            border-radius: 10px;
 
             .content {
-              padding: 25px;
+              h5 {
+                color: #2372C1FF;
+              }
+
+              .name {
+                font-size: 20px;
+                margin: 5px 0;
+              }
 
               p {
-                width: 90%;
-                margin: 0 !important;
-
                 img {
-                  width: 40%;
+                  width: 100px;
                 }
               }
 
-              strong {
-                font-size: 10px;
-                font-weight: 700;
-                color: #2FC573FF;
+              div {
+                width: 20px;
+
+                :first-child {
+                  font-size: 16px;
+                }
+
+                span {
+                  margin-top: 12px;
+                  size: 20px;
+                  font-weight: 600;
+                }
+
               }
 
-              img {
-                width: 100%;
+
+              .time {
+                width: 100px;
+                margin: 0 10px;
+                padding: 15px;
+                font-weight: 600;
+                color: white;
+                background: #ED174AFF;
+                border-radius: 10px;
+              }
+            }
+          }
+
+          .rightSide {
+            flex-wrap: wrap;
+            margin-left: 30px;
+            border: 1px solid rgb(211, 211, 211);
+            border-radius: 10px;
+
+            .product {
+              border: 0.5px solid rgb(214, 214, 214);
+
+              .content {
+                padding: 25px;
+
+                p {
+                  width: 90%;
+                  margin: 0 !important;
+
+                  img {
+                    width: 40%;
+                  }
+                }
+
+                strong {
+                  font-size: 10px;
+                  font-weight: 700;
+                  color: #2FC573FF;
+                }
+
+                img {
+                  width: 100%;
+                }
               }
             }
           }
         }
       }
+
     }
   }
 
@@ -862,6 +865,7 @@ footer {
 
 .formSection {
   margin-top: 20px;
+
   h5 {
     margin-top: 20px;
     border-bottom: 1px solid rgb(211, 211, 211);
@@ -953,7 +957,6 @@ footer {
 @media (max-width: 767px) {
   #featurecntnr .card img {
     width: 100%;
-    height: 75vh;
   }
 }
 
@@ -972,8 +975,8 @@ footer {
 
 #featurecntnr .card .card-img-overlays {
   position: absolute;
-  bottom: 15%;
-  left: 10%;
+  // bottom: 15%;
+  // left: 10%;
   color: #fff;
   font-weight: bolder;
 }
@@ -984,6 +987,10 @@ footer {
 
 #featurecntnr .indicator {
   border: 1px solid rgb(202, 202, 202);
+  border-radius: 50%;
+  position: absolute;
+  font-size: 20px;
+  top: 45%;
   padding: 3px 6px 3px 6px;
 }
 
